fix pdlist sidebar category text wrap.

--- a/css/scss/_general.scss
+++ b/css/scss/_general.scss
@@ -190,3 +190,9 @@ a:focus {
 .browser-message {
   display: none;
 }
+
+.single-line-text-wrap {
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
